Fixed overflow issue when rendering new audio bar

--- a/app/assets/stylesheets/api/app.scss
+++ b/app/assets/stylesheets/api/app.scss
@@ -1,6 +1,7 @@
 #app-main-container {
   position: relative;
   height: 100%;
+  overflow: hidden;
 }
 
 footer {
