--- a/app/assets/stylesheets/api/mediabar.scss
+++ b/app/assets/stylesheets/api/mediabar.scss
@@ -6,6 +6,7 @@
   height: 100%;
   width: 100%;
   background-color: #224099;
+  overflow: hidden;
 }
 
 input[type=range] {
